# rapid-mcp-server-rust

./: .gitignore  Cargo.toml  README.md  commands  prd-rust-v2.md  prd-rust.md
docs/: health-check-2025-10-30.md
src/: main.rs
src/command/: loader.rs  types.rs
src/github/: mod.rs
src/mcp/: server.rs  types.rs
src/validation/: mod.rs
