[package]
name = "rapid-mcp-server-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rapid-mcp-server"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Template engine
handlebars = "5.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (lightweight setup)
tokio = { version = "1.35", features = ["io-std", "sync", "macros"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "startup"
harness = false
